# optix_rt

./: CMakeLists.txt  README.md
src/: main.cpp
src/buffer/: Buffer.h  Octree.cpp  Octree.h  Texture.cpp  Texture.h
src/components/: Camera.cpp  Camera.h
src/pipeline/: Pipeline.cpp
src/render/: Renderer.cpp  Renderer.h
src/shader/: Shader.cpp
src/utils/: Window.cpp  Window.h
